--- a/front/angular.json
+++ b/front/angular.json
@@ -20,7 +20,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/nee-radio",
+            "aot": true,
+            "outputPath": "../dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,6 +65,14 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "nee": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.nee.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -76,7 +85,10 @@
             },
             "development": {
               "browserTarget": "nee-radio:build:development"
-            }
+            },
+            "nee": {
+            "browserTarget": "nee-radio:build:nee"
+        }
           },
           "defaultConfiguration": "development"
         },
@@ -95,8 +107,8 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/favicon.ico"
             ],
             "styles": [
               "src/styles.scss"
